# Learn-OpenGL

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  readme.md
libraries/Boilerplate-OpenGL/: CMakeLists.txt
libraries/Boilerplate-OpenGL/include/pf_gl/: DrawingContext3D.hpp  ElementBuffer.hpp  EulerTransform3D.hpp  GLFW.hpp  Material.hpp  Mesh.hpp  MinecraftCamera.hpp  Model.hpp  RenderingOptions.hpp  Shader.hpp  Texture.hpp  Transform3D.hpp  ValueTypes.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp  Window.hpp
libraries/Boilerplate-OpenGL/src/: ElementBuffer.cpp  EulerTransform3D.cpp  GLFW.cpp  Mesh.cpp  MinecraftCamera.cpp  Model.cpp  RenderingOptions.cpp  Shader.cpp  Texture.cpp  ValueTypes.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp  Window.cpp
libraries/PF-Utils/: CMakeLists.txt
libraries/PF-Utils/include/pf_utils/: FileUtils.hpp  Hashing.hpp  IndexedString.hpp  Math.hpp  RangeAlgorithms.hpp  RawBuffer.hpp  StringUtils.hpp  TemplateMath.hpp  VectorMath.hpp  VideoEncoder.hpp
libraries/PF-Utils/src/: FileUtils.cpp  IndexedString.cpp  RawBuffer.cpp  StringUtils.cpp  VideoEncoder.cpp
libraries/PF-Utils/test/: IndexedStringTest.cpp  MathTest.cpp  RangeAlgorithmsTest.cpp  StringUtilsTest.cpp  TemplateMathTest.cpp  VectorMathTest.cpp
projects/Fragment-Shader-Rendering/: CMakeLists.txt
projects/Fragment-Shader-Rendering/src/: Main.cpp
projects/Learn-OpenGL/: CMakeLists.txt
projects/Learn-OpenGL/src/: Main.cpp
scripts/: DependenciesSetup.cmake  UtilityFunctions.cmake
(+9 files in other folders)
